--- a/package.json
+++ b/package.json
@@ -17,5 +17,6 @@
   },
   "homepage": "https://github.com/pesto-students/bizzare-string-incrementer-Imagine-Me#readme",
   "dependencies": {
+    "jest": "^26.6.3"
   }
 }
